@@ -1,4 +1,4 @@
-LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.716 $>
+LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.717 $>
 
 
 [Note: This file does not mention every change made to the NetBSD source tree.
@@ -93,3 +93,5 @@ Changes from NetBSD 4.0 to NetBSD 5.0:
 	ofctl(8): initial import, formerly known as ofdump2. For macppc,
 		shark, sparc64.
 		Written by Matt Thomas. [macallan 20060929]
+	pcictl(8): Add "list -n" to print ID and class numerical, instead
+		of resolving to strings [hubertf 20061001]
